cmake_minimum_required(VERSION 3.26)
project(tutorial_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(tutorial_2
        src/task-1.cpp
        src/task-2.cpp
        src/task-3.cpp
        src/task-4.cpp
        src/task-5.cpp
        src/task-6.cpp
        src/task-7.cpp
        src/task-8.cpp
        src/task-9.cpp
        src/task-10.cpp)
